--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-ocean",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "n8n community node for Ocean.io API integration - lookalike company and people discovery",
   "keywords": [
     "n8n-community-node-package",
@@ -27,8 +27,7 @@
   "packageManager": "pnpm@9.1.4",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && gulp build:icons",
-    "prepublishOnly": "npm run build"
+    "build": "tsc && gulp build:icons"
   },
   "files": [
     "dist",
