CRITICAL FIX: Add proper entry point exports
- Fixed dist/index.js to export nodeTypes and credentialTypes objects
- Matches exact pattern from working n8n-nodes-instantly package
- index.js now properly requires './dist/index.js'
- This should resolve the 'Class could not be found' error completely
- Updated to version 0.1.5

Root cause: n8n community nodes require proper entry point exports
- nodeTypes: { 'ocean': Ocean }
- credentialTypes: { 'oceanApi': OceanApi }

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2022"],
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -22,8 +22,7 @@
     "resolveJsonModule": true
   },
   "include": [
-    "credentials/**/*",
-    "nodes/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "dist",
