--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-ocean",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "n8n community node for Ocean.io API integration - lookalike company and people discovery",
   "keywords": [
     "n8n-community-node-package",
@@ -31,6 +31,7 @@
   },
   "files": [
     "dist",
+    "index.js",
     "README.md",
     "LICENSE.md"
   ],
